--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
     "description": "Portfolio website for Edda Ósk Óskarsdóttir",
     "main": "index.html",
     "scripts": {
-        "sass": "sass src/scss:src/css --watch",
-        "start": "live-server src"
+        "sass": "sass --load-path=node_modules scss:css --watch",
+        "start": "live-server ."
     },
     "author": "Edda Ósk Óskarsdóttir",
     "license": "MIT",
     "devDependencies": {
+        "bootstrap": "^5.3.8",
         "live-server": "^1.2.2",
         "sass": "^1.63.6"
     }
